--- a/end_to_end_second_hand_car_sales_regression.ipynb
+++ b/end_to_end_second_hand_car_sales_regression.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1B5_L_4JkJevIF_z3yHZbFpREVAVaumIC",
-      "authorship_tag": "ABX9TyPRLxIKuzk36jMFd/5VZQ7p",
+      "authorship_tag": "ABX9TyNam7SBK21ZwPJ7b5MJ6wsZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,58 +41,35 @@
         "\n",
         "* How well can we predict the future sale price of a our second hand car, given its characteristics and previous examples of how much similar our second hand cars have been sold for?\n",
         "\n",
-        "### 2. Exploration and Preprocessing\n",
+        "### 2. Data Preprocessing\n",
         "\n",
-        "The data is downloaded from the Kaggle BlueBook for Second Hand Car Sales:\n",
-        "https://www.kaggle.com/datasets/devantltd/analysing-second-hand-car-sales-data?select=second_hand_car_sales.csv\n",
+        "* Load and preprocess the dataset, which includes handling missing values, encoding categorical variables (like Manufacturer, Model, and Fuel type), and scaling numerical features if needed.\n",
+        "* Split the dataset into training and testing sets to train and evaluate the Random Forest Regressor.\n",
         "\n",
-        "* We begin by exploring the dataset of 50,000 car sale records to understand the features and their distributions.\n",
+        "### 3. Training the Random Forest Regressor Model\n",
         "\n",
-        "* Perform data cleaning and preprocessing steps such as handling missing values, encoding categorical variables, and scaling numerical features for modeling.\n",
+        "* Import the Random Forest Regressor from a machine learning library like scikit-learn.\n",
+        "* Define the features (X) and the target variable (y) from the dataset.\n",
+        "* Create an instance of the Random Forest Regressor model with appropriate hyperparameters `(e.g., number of estimators, max depth)`.\n",
+        "* Fit the model to the training data using the `fit()` method.\n",
         "\n",
-        "### 3. Regression Model with Single Numerical Input Features\n",
+        "### 4. Model Evaluation\n",
         "\n",
-        "* Start by implementing regression models using single numerical input features like mileage, engine size, and vehicle model year to predict car prices.\n",
-        "* Analyze the relationships between car prices and these numerical factors to identify the most influential variables using linear and non-linear models.\n",
+        "* Evaluate the performance of the Random Forest Regressor on the testing set using metrics like Mean Squared Error (MSE), R-squared, or Mean Absolute Error (MAE).\n",
         "\n",
+        "### 5. Feature Importance\n",
         "\n",
-        "### 4. Regression Model with Multiple Numerical Input Features\n",
+        "* Analyze the feature importance provided by the Random Forest Regressor to understand which features (Engine Size, Year of Manufacture, Mileage, Manufacturer, Model, Fuel type) have the most significant impact on predicting car prices.\n",
+        "* Visualize the feature importance using a bar chart or other suitable visualization techniques.\n",
         "\n",
-        "* Expand our analysis by incorporating multiple numerical input parameters such as year of manufacture and kilometers achieved to enhance the predictive performance.\n",
-        "* Evaluate how considering multiple factors simultaneously impacts the accuracy of price predictions using regression models.\n",
+        "### 6. Fine-Tuning the Model\n",
         "\n",
+        "* Optionally, you can fine-tune the hyperparameters of the Random Forest Regressor model using techniques like Grid Search or Random Search to optimize its performance.\n",
         "\n",
-        "### 5. Regression Model with Categorical Variables\n",
+        "### 7. Interpretation and Conclusion\n",
         "\n",
-        "* Enhance our prediction models by including categorical variables like manufacturer and model into the regression analysis.\n",
-        "* Assess the effectiveness of incorporating categorical variables in predicting car prices and analyze how it complements the numerical features.\n",
-        "\n",
-        "\n",
-        "### 6. Artificial Neural Network (ANN) Model\n",
-        "\n",
-        "* Implement an Artificial Neural Network (ANN) model to capture complex relationships within the dataset and predict car prices.\n",
-        "* Fine-tune the architecture and hyperparameters of the ANN for optimal performance and showcase its flexibility in handling complex datasets.\n",
-        "\n",
-        "\n",
-        "### 7. Model Comparison and Conclusion\n",
-        "\n",
-        "* Compare the performance of different supervised learning models including Random Forest Regressor for forecasting car prices.\n",
-        "* Evaluate the evaluation metrics and visualizations to determine the most efficient model for predicting car prices based on both numerical and categorical variables.\n",
-        "\n",
-        "\n",
-        "### 8. k-Means Clustering Algorithm\n",
-        "\n",
-        "* Explore unsupervised learning using the k-Means clustering algorithm to identify clusters within the car sales dataset.\n",
-        "* Determine the optimal number of clusters using evaluation metrics like silhouette score and analyze critical variables influencing cluster segmentation.\n",
-        "\n",
-        "\n",
-        "### 9. Comparison with Other Clustering Algorithms\n",
-        "\n",
-        "* Compare the outcomes of k-Means clustering with other techniques such as DBSCAN and hierarchical clustering to assess clustering performance.\n",
-        "* Evaluate the effectiveness of different clustering algorithms in segmenting the dataset and highlight the strengths of each method.\n",
-        "\n",
-        "\n",
-        "\n"
+        "* Interpret the results from the Random Forest Regressor model and the feature importance analysis to gain insights into what factors most affect car prices in our dataset.\n",
+        "* Summarize our findings and conclusions based on the model's performance and the insights gathered from the analysis.\n"
       ],
       "metadata": {
         "id": "emsVTdK1gfW5"
